Fix page jump during navbar switch

--- a/app/assets/stylesheets/modules/navbar.css.scss
+++ b/app/assets/stylesheets/modules/navbar.css.scss
@@ -51,3 +51,7 @@
     }
   }
 }
+
+.navbar-placeholder {
+  height: 72px;
+}
